# cookiecutter-aiohttp

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: README.md  requirements-dev.in  requirements.txt  setup.cfg  setup.py  tox.ini  {{cookiecutter.project_slug}}.toml
{{cookiecutter.project_slug}}/tests/: test_init.py  test_logger.py  test_views.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  logger.py  views.py  {{cookiecutter.project_slug}}.py
