[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.project_version }}

description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
url = {{ cookiecutter.project_url }}

classifiers =
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 3

keywords = {{ cookiecutter.project_slug }}

[options]
packages = find:
install_requires =
  aiohttp
  aiohttp-cors
  toml

[options.entry_points]
console_scripts =
  {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.{{ cookiecutter.project_slug }}:main"
